# ghreport

./: .gitignore  AGENTS.md  README.md  config.example.toml  example.md  pyproject.toml  test.py
.beads/export-state/: a29760f2e80b4b83.json
ghreport/: TODO  __init__.py  ghreport.py
ghreport/core/: __init__.py  analyzer.py  fetcher.py  formatters.py  models.py  parser.py  teams.py
ghreport/dashboard/: __init__.py  ai.py  app.py  cache.py  config.py  db.py  scheduler.py
ghreport/dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ghreport/dashboard/frontend/src/: App.vue
ghreport/dashboard/frontend/src/components/: ChartCard.vue  ClusterNode.vue  RepoSelector.vue
ghreport/dashboard/frontend/src/components/charts/: LabelBarChart.vue  MonthBoxChart.vue  OpenIssueChart.vue  TermList.vue  WeeklyLineChart.vue
ghreport/dashboard/frontend/src/composables/: useSortable.ts
ghreport/dashboard/frontend/src/router/: index.ts
ghreport/dashboard/frontend/src/stores/: dateRange.ts  excludedRepos.ts  issues.ts  prs.ts  repos.ts  syncActivity.ts
ghreport/dashboard/frontend/src/views/: Chat.vue  ClosedIssues.vue  DashboardHome.vue  Insights.vue  IssueRevisits.vue  MemberDetail.vue  PrActivity.vue  RepoDetail.vue  Repositories.vue  TeamMembers.vue
ghreport/dashboard/routes/: aggregate.py  charts.py  chat.py  insights.py  issues.py  members.py  prs.py  reports.py  repos.py  sync.py  team.py
